# cmake_templates

template/checkCXX/checkCXX/: CMakeLists.txt
template/cpack/: CMakeLists.txt  config.hh  config.hh.in
template/cpack/calculator_lib/: CMakeLists.txt
template/export_target/: CMakeLists.txt
template/export_target/calculator_lib/: CMakeLists.txt
template/export_target/calculator_lib/src/: calculator.cpp
template/export_target_header/: CMakeLists.txt
template/export_target_header/calculator_lib/: CMakeLists.txt
template/export_target_version/: CMakeLists.txt
template/files_defination/: CMakeLists.txt  main.cc
template/files_defination/calculator_lib/: CMakeLists.txt
template/generator_expression/: CMakeLists.txt  main.cpp
template/installation/: CMakeLists.txt  config.hh  main.cc
template/installation/calculator_lib/: CMakeLists.txt
template/properties/: CMakeLists.txt
template/properties/calculator_lib/cmake_utility/: organization_source_file.cmake
template/shared_library/: CMakeLists.txt  main.cc
template/shared_library/calcuator_lib/: CMakeLists.txt
template/target_defination/: CMakeLists.txt  main.cc
template/target_precompile/: CMakeLists.txt
template/target_precompile/calculator_lib/: CMakeLists.txt
template/target_precompile/calculator_lib/include/public/calculator_lib/: calculator.h
template/target_source/: CMakeLists.txt
template/unistallation/: CMakeLists.txt  cmake_unistall_role.cmake.in
template/unistallation/calculator_lib/: CMakeLists.txt
